Jessie proofing fixes

--- a/journal-writings/modernized/01-testimony-yorkshire.adoc
+++ b/journal-writings/modernized/01-testimony-yorkshire.adoc
@@ -124,8 +124,10 @@ that as in his infinite wisdom he has greatly stripped the church,
 by removing of late several faithful ministers and elders,
 he may be pleased to send forth many more faithful laborers into his harvest.
 
+[.signed-section-closing]
 Signed in, by order, and on behalf of said meeting.
 
+[.signed-section-signature]
 Thomas Bennett, John Storr, Joseph Eglin, Thomas Perkinson, Joseph Wright,
 Samuel Briscoe, John Turner, Joshua Robinson, Thomas Priestman,
 and several other Friends.
