--- a/journal-writings/modernized/03-chapter-1.adoc
+++ b/journal-writings/modernized/03-chapter-1.adoc
@@ -113,7 +113,7 @@ I was filled with confusion; and in great affliction, both of mind and body,
 I lay and bewailed myself.
 
 I had not confidence to lift up my cries to God, whom I had thus offended;
-but in a deep sense of my great folly, I was humbled before`' him: and at length,
+but in a deep sense of my great folly, I was humbled before him: and at length,
 that word which is as a fire and a hammer, broke and dissolved my rebellious heart,
 and then my cries were put up in contrition;
 and in the multitude of his mercies I found inward relief, and felt a close engagement,
