--- a/journal-writings/modernized/05-chapter-3.adoc
+++ b/journal-writings/modernized/05-chapter-3.adoc
@@ -375,7 +375,7 @@ grafting, trimming and inoculating.
 In the mercantile business it is the custom, where I lived, to sell chiefly on credit,
 and poor people often get in debt; and when payment is expected,
 not having wherewith to pay, their creditors often sue for it at law.
-Playing often observed occurrences of this kind,
+Having often observed occurrences of this kind,
 I found it good for me to advise poor people to take
 such goods as were most useful and not costly.
 
