--- a/journal-writings/modernized/11-chapter-9.adoc
+++ b/journal-writings/modernized/11-chapter-9.adoc
@@ -66,7 +66,7 @@ and that the weakness which has overspread the Society,
 and the barrenness manifest among us, is matter of much sorrow.`"
 He then mentioned the uncertainty of his attending these meetings in future,
 expecting his dissolution was now near; and having tenderly expressed his concern for us,
-signified that he had seen in the true fight that the Lord would bring back
+signified that he had seen in the true light that the Lord would bring back
 his people from these things into which they were thus degenerated,
 but that his faithful servants must first go through great and heavy exercises.
 
@@ -116,7 +116,10 @@ in which I had a renewed prospect of the nature of that wisdom from above,
 which leads to a right use of all gifts, both spiritual and temporal,
 and gives contentment therein: under a feeling thereof, I wrote as follows:
 
-"`Hath He, who gave me a being attended with many lacks unknown to brute creatures,
+[.embedded-content-document.paper]
+--
+
+Hath He, who gave me a being attended with many lacks unknown to brute creatures,
 given me a capacity superior to theirs, and shown me,
 that a moderate application to business is proper to my present condition; and that this,
 attended with his blessing, may supply all outward needs,
@@ -125,23 +128,23 @@ and no imaginary needs proceeding from an evil spirit, have any place in me?
 Attend then, O my soul! to this pure wisdom,
 as your sure conductor through the manifold dangers in this world!
 
-"`Does pride lead to vanity?
+Does pride lead to vanity?
 Does vanity form imaginary needs?
 Do these needs prompt men to exert their power in requiring that of others,
 from which they would rather be excused, were the same required of them?
 
-"`Do these proceedings beget hard thoughts?
+Do these proceedings beget hard thoughts?
 Do hard thoughts, when ripe, become malice?
 Does malice, when ripe,
 become revengeful and in the end inflict terrible pains on their fellow creatures,
 and spread desolations in the world?
 
-"`Do people, walking in uprightness, delight in each other`'s happiness?
+Do people, walking in uprightness, delight in each other`'s happiness?
 And do these creatures, capable of this attainment, by giving way to an evil spirit,
 employ their wit and strength to afflict and destroy one another?
 
-"`Remember then, O my soul! the quietude of those in whom Christ governs,
-and in all your proceedings feel after it! "`Does he
+Remember then, O my soul! the quietude of those in whom Christ governs,
+and in all your proceedings feel after it! Does he
 condescend to bless you with his presence?
 To move and influence to action?
 To dwell in you and walk in you?
@@ -152,11 +155,14 @@ gendering to discord and strife, be given way to.
 Does he claim my body as his temple?
 And graciously grant that I may be sacred to him.
 Oh! that I may prize this favor;
-and that my whole life may be conformable to this character! "`Remember,
-O my soul! that the prince of peace is your Lord:
+and that my whole life may be conformable to this character!
+
+Remember, O my soul! that the prince of peace is your Lord:
 that he communicates his unmixed wisdom to his family;
 that they living in perfect simplicity,
-may give no just cause of offense to any creature, but may walk as he walked!`"
+may give no just cause of offense to any creature, but may walk as he walked!
+
+--
 
 Having felt an openness in my heart toward visiting families in our own meeting,
 and especially in the town of Mount Holly, the place of my abode,
