--- a/journal-writings/modernized/14-chapter-12.adoc
+++ b/journal-writings/modernized/14-chapter-12.adoc
@@ -158,7 +158,7 @@ and that henceforth I might not consider myself as a distinct or separate being.
 In this state I remained several hours.
 I then heard a soft melodious voice, more pure and harmonious than any I had heard before.
 I believed it was the voice of an angel, who spoke to the other angels,
-and the words were these, John Woolman is dead.
+and the words were these, "`John Woolman is dead.`"
 I soon remembered that I once was John Woolman;
 and being assured that I was alive in the body,
 I greatly wondered what that heavenly voice could mean.
@@ -189,7 +189,7 @@ and the life I now live in the flesh, I live by the faith of the Son of God,
 who loved me, and gave himself for me.`"
 Then the mystery was opened;
 and I perceived there was joy in heaven over a sinner who had repented;
-and that that language (John Woolman is dead)
+and that that language ("`John Woolman is dead`")
 meant no more than the death of my own will.
 
 Soon after this I coughed, and raised much bloody matter;
@@ -429,7 +429,7 @@ Our friend Thomas Priestman and others who attended him,
 preserved the following minutes of his expressions in the time of his sickness,
 and of his decease.
 
-First-day, the 27th of the ninth month, 1772, His disorder appeared to be the smallpox:
+First-day, the 27th of the ninth month, 1772. His disorder appeared to be the smallpox:
 being asked to have a doctor`'s advice,
 he signified he had not freedom or liberty in his mind so to do,
 standing wholly resigned to his will who gave him life,
