--- a/journal-writings/modernized/19-epistle.adoc
+++ b/journal-writings/modernized/19-epistle.adoc
@@ -91,7 +91,7 @@ asks;--thus preservation from sin is known,
 and the fruits of righteousness are brought forth by such who inwardly unite in prayer.
 
 How weighty are our solemn meetings when the name of Christ is
-kept holy "`How precious is that state in which the children
+kept holy! "`How precious is that state in which the children
 of the Lord are so redeemed from the love of this world,
 that they are accepted and blessed in all that they do.`"
 R+++.+++ Barclay`'s Apology, p. 404.
