--- a/journal-writings/original/01-testimony-yorkshire.adoc
+++ b/journal-writings/original/01-testimony-yorkshire.adoc
@@ -125,7 +125,9 @@ that as in his infinite wisdom he hath greatly stripped the church,
 by removing of late divers faithful ministers and elders,
 he may be pleased to send forth many more faithful labourers into his harvest.
 
+[.signed-section-closing]
 Signed in, by order, and on behalf of said meeting.
 
+[.signed-section-signature]
 Thomas Bennett, John Storr, Joseph Eglin, Thomas Perkinson, Joseph Wright,
 Samuel Briscoe, John Turner, Joshua Robinson, Thomas Priestman, And divers other Friends.
