--- a/journal-writings/original/04-chapter-2.adoc
+++ b/journal-writings/original/04-chapter-2.adoc
@@ -106,7 +106,7 @@ We left our province on the 12th day of the third month, in the year 1746,
 and had several meetings in the upper part of Chester county, and near Lancaster;
 in some of which, the love of Christ prevailed, uniting us together in his service.
 Then we crossed the river Susquehanna, and had several meetings in a new settlement,
-called the Red-lands the oldest of which, as I was informed, did not exceed ten years.
+called the Red-lands, the oldest of which, as I was informed, did not exceed ten years.
 It is the poorer sort of people who commonly begin to improve remote deserts:
 with a small stock they have houses to build, lands to clear and fence, corn to raise,
 clothes to provide, and children to educate; that Friends, who visit such,
