--- a/journal-writings/original/07-chapter-5.adoc
+++ b/journal-writings/original/07-chapter-5.adoc
@@ -350,7 +350,7 @@ with respect to the righteousness of their motives in keeping them,
 that impartial justice might be administered throughout.
 Several Friends expressed their desire,
 that a visit might be made to such as kept slaves;
-and many Friends said that they believed liberty was the negroes right; to which,
+and many Friends said that they believed liberty was the negroes`' right; to which,
 at length, no opposition was made publicly.
 A minute was made on that subject, more full than any heretofore;
 and the names of several Friends entered,
