--- a/journal-writings/original/18-remarks.adoc
+++ b/journal-writings/original/18-remarks.adoc
@@ -129,7 +129,7 @@ but through the straightness of their condition,
 are often drawn on to labour under weariness, to toil through hardships themselves,
 and frequently to oppress those useful animals with which we are entrusted.
 
-From age to age, throughout all ages.
+From age to age, throughout all ages,
 Divine love is that alone, in which dominion has been, is, and will be rightly conducted.
 
 In this the endowments of men are so employed,
@@ -196,7 +196,7 @@ for thou also hast wrought all our works in us.`"
 "`In the Lord have we righteousness and strength.`"
 
 In this state our minds are preserved watchful in following
-the leadings of his spirit in all our proceedings,
+the leadings of his Spirit in all our proceedings,
 and a care is felt for a reformation in general; that our own posterity,
 with the rest of mankind in succeeding ages, may not be entangled by oppressive customs,
 transmitted to them through our hands.
@@ -645,7 +645,7 @@ in the prosecution of a suit brought to recover their
 value from the insurers--the result of which however,
 was, that the loss was adjudged to fall upon the owners.
 
-"`The case of the Rodeur, captain B+++_______+++ , a French vessel of two hundred tons burden,
+The case of the Rodeur, captain B+++_______+++ , a French vessel of two hundred tons burden,
 is remarkable.
 
 She left Havre for the coast of Africa, where she arrived and anchored before Bonny,
@@ -679,7 +679,7 @@ and that there was not one individual left, either sailor or slave, who could se
 But alas--this pitiable tale of woe was utterly in vain--no help could be
 given them--the St. Leon passed on and was never heard of more!
 
-"`At length by a concurrence of very favourable circumstances,
+At length by a concurrence of very favourable circumstances,
 and the skill and perseverance of one man, who only preserved his sight unimpaired,
 the Rodeur reached Gaudaloupe.
 By this time thirty-nine of the slaves had become blind,
@@ -688,7 +688,7 @@ Out of the crew consisting of twenty-two, twelve had lost their sight,
 among whom was the surgeon, five had become blind of one eye,
 and four others were partially injured.
 
-"`Now what will the reader suppose was the first act of this captain and
+Now what will the reader suppose was the first act of this captain and
 crew when they found themselves safely entering the port of Gaudaloupe.
 Doubtless he will imagine they were employed in returning unfeigned
 thanks to God for so signal and so unmerited a deliverance.
@@ -701,7 +701,7 @@ to the number of thirty-nine, who were incurably blind.
 This they did upon the wicked plea that if they
 carried them on shore nobody would purchase them,
 and they would of course be at the expense of their maintenance; and further,
-by feigning an act of necessity, they might claim their value from the underwriters.`"
+by feigning an act of necessity, they might claim their value from the underwriters.
 
 Sir George Collier of the Tartar frigate,
 gave chase to a vessel supposed to be a slave ship.
@@ -820,7 +820,7 @@ that during the chase ninety-seven slaves had been thrown overboard,
 and that a Spanish captain he had captured,
 declared he would never hesitate to throw the slaves overboard, to prevent being taken.`"
 
-"`Captain Wauchope in the same letter informs, that on the 18th of ninth month, 1836,
+Captain Wauchope in the same letter informs, that on the 18th of ninth month, 1836,
 the Thalia captured the Portuguese brig Felix, five hundred and ninety slaves on board.
 '`After capture,`' he says, '`I went on board,
 and such a scene of horror it is not easy to describe; the long`'-boat on the booms,
@@ -828,7 +828,7 @@ and the deck aft, were crowded with little children, sickly, poor little unhappy
 some of them rather pretty, and some much marked and tattoed;
 much pains must have been taken by their miserable parents to ornament and beautify them.
 
-"`The women lay between decks aft, much crowded, and perfectly naked;
+The women lay between decks aft, much crowded, and perfectly naked;
 they were not barred down, the hatchway, a small one, being off;
 but the place for the men was too horrible, the wretches, chained two and two,
 gasping and striving to get at the bars of the hatchways,
@@ -836,7 +836,7 @@ and such a steam and stench as to make it intolerable even to look down.
 It requires much caution at first, in allowing them to go on deck,
 as it is a common practice for them to jump overboard to get quit of their misery.
 
-"`The slave-deck was not more than three feet six inches in height,
+The slave-deck was not more than three feet six inches in height,
 and the human beings stowed, or rather crushed as close as possible;
 many appeared very sickly.
 There was no way of getting into the slave-room but by the hatchway.
@@ -848,9 +848,9 @@ The colour of these poor creatures was of a dark squalid yellow,
 so different from the fine glossy black of our liberated Africans and Kroomen.
 I was shown a man much bit and bruised;
 it was done in a struggle at the gratings of their hatchways,
-for a mouthful of fresh air.`'
+for a mouthful of fresh air.
 
-"`The Carolina, captured in 1834, off Wydah.
+The Carolina, captured in 1834, off Wydah.
 This vessel was only seventy-five tons burden,
 yet she had three hundred and fifty negroes crammed on board of her,
 one hundred and eighty of whom were literally so stowed as to
