--- a/journal-writings/modernized/18-remarks.adoc
+++ b/journal-writings/modernized/18-remarks.adoc
@@ -121,7 +121,7 @@ but through the straightness of their condition,
 are often drawn on to labor under weariness, to toil through hardships themselves,
 and frequently to oppress those useful animals with which we are entrusted.
 
-From age to age, throughout all ages.
+From age to age, throughout all ages,
 Divine love is that alone, in which dominion has been, is, and will be rightly conducted.
 In this the endowments of men are so employed,
 that the friend and the governor are united in one,
@@ -185,7 +185,7 @@ Again, "`Lord, you will ordain peace for us,
 for you also have wrought all our works in us.`"
 "`In the Lord have we righteousness and strength.`"
 In this state our minds are preserved watchful in following
-the leadings of his spirit in all our proceedings,
+the leadings of his Spirit in all our proceedings,
 and a care is felt for a reformation in general; that our own posterity,
 with the rest of mankind in succeeding ages, may not be entangled by oppressive customs,
 transmitted to them through our hands.
@@ -665,7 +665,7 @@ Out of the crew consisting of twenty two, twelve had lost their sight,
 among whom was the surgeon, five had become blind of one eye,
 and four others were partially injured.
 
-"`Now what will the reader suppose was the first act of this captain and
+Now what will the reader suppose was the first act of this captain and
 crew when they found themselves safely entering the port of Guadeloupe.
 Doubtless he will imagine they were employed in returning unfeigned
 thanks to God for so signal and so unmerited a deliverance.
@@ -678,7 +678,8 @@ to the number of thirty-nine, who were incurably blind.
 This they did upon the wicked plea that if they
 carried them on shore nobody would purchase them,
 and they would of course be at the expense of their maintenance; and further,
-by feigning an act of necessity, they might claim their value from the underwriters.`"
+by feigning an act of necessity, they might claim their value from the underwriters.
+
 Sir George Collier of the Tartar frigate,
 gave chase to a vessel supposed to be a slave ship.
 In the course of the chase several casks were observed to be floating in the sea,
@@ -742,8 +743,7 @@ there was not the smallest probability of finding any of the wretched negroes al
 for the casks being tight they must have perished from suffocation.
 See Papers laid on the table of the House of Commons--Report of Sir George
 Collier--Speech of Due de Boglie--Report of African Institution,
-vol.
-16.
+vol. 16.
 
 The schooner, Don Morales, master, arrived in the Rio Pongos,
 where she took on board two hundred slaves.
@@ -773,7 +773,7 @@ having a large cargo of human beings chained together: '`The master of the vesse
 with more humanity than his fellows, permitted some of them to come on deck,
 but still chained together, for the benefit of the air,
 when they immediately commenced jumping overboard, hand in hand,
-and drowning in couples.`'
+and drowning in couples.
 He explains the cause of this circumstance by saying,
 they were just brought from a situation between decks,
 and to which they knew they must return,
@@ -822,7 +822,7 @@ The color of these poor creatures was of a dark squalid yellow,
 so different from the fine glossy black of our liberated Africans and Kroomen.
 I was shown a man much bit and bruised;
 it was done in a struggle at the gratings of their hatchways,
-for a mouthful of fresh air.`'
+for a mouthful of fresh air.
 
 The Carolina, captured in 1834, off Wydah.
 This vessel was only seventy-five tons burden,
@@ -858,7 +858,7 @@ It appears that between sixty and seventy murders had been
 committed during the voyage on the helpless Africans;
 and in this manner:--When any of the slaves refused their food or became sick,
 the boatswain`'s mate, with a weighty club struck them on the back of the neck,
-when they fell, and were thrown overboard.`"
+when they fell, and were thrown overboard.
 
 Shocking as these details are, the truth of them is indisputable;
 and while a system exists which inflicts such
@@ -1029,15 +1029,15 @@ who never injured us.
 
 Were we for the term of one year only to be eye
 witnesses to what passes in getting these slaves;
-Was the blood which is there shed to be sprinkled on our garments;
-Were the poor captives bound with thongs and heavy laden with elephants`' teeth,
-to pass before our eyes on their way to the sea:
-Were their bitter lamentations day after day to ring in our ears,
+was the blood which is there shed to be sprinkled on our garments;
+were the poor captives bound with thongs and heavy laden with elephants`' teeth,
+to pass before our eyes on their way to the sea;
+were their bitter lamentations day after day to ring in our ears,
 and their mournful cries in the night to hinder us from sleeping:
-Were we to hear the sound of the tumult when the slaves
+were we to hear the sound of the tumult when the slaves
 on board the ships attempt to kill the English,
-and behold the issue of those bloody conflicts:
-What pious man could be a witness to these things,
+and behold the issue of those bloody conflicts;
+what pious man could be a witness to these things,
 and see a trade carried on in this manner, without being deeply affected with sorrow?
 Through abiding in the love of Christ we feel a
 tenderness in our hearts toward our fellow creatures,
