--- a/journal-writings/original/02-testimony-burlington.adoc
+++ b/journal-writings/original/02-testimony-burlington.adoc
@@ -152,4 +152,8 @@ Signed in, and by order of the said meeting, by Samuel Allinson, Clerk.
 Read and approved at our Quarterly Meeting,
 held at Burlington the 29th of the eighth month, 1774.
 
-Signed by order of said meeting, Daniel Smith, Clerk.
+[.signed-section-closing]
+Signed by order of said meeting,
+
+[.signed-section-signature]
+Daniel Smith, Clerk.
