--- a/journal-writings/original/11-chapter-9.adoc
+++ b/journal-writings/original/11-chapter-9.adoc
@@ -67,7 +67,7 @@ and that the weakness which hath overspread the Society,
 and the barrenness manifest amongst us, is matter of much sorrow.`"
 He then mentioned the uncertainty of his attending these meetings in future,
 expecting his dissolution was now near; and having tenderly expressed his concern for us,
-signified that he had seen in the true fight that the Lord would bring back
+signified that he had seen in the true light that the Lord would bring back
 his people from these things into which they were thus degenerated,
 but that his faithful servants must first go through great and heavy exercises.
 
@@ -117,7 +117,10 @@ in which I had a renewed prospect of the nature of that wisdom from above,
 which leads to a right use of all gifts, both spiritual and temporal,
 and gives contentment therein: under a feeling thereof, I wrote as follows:
 
-"`Hath He,
+[.embedded-content-document.paper]
+--
+
+Hath He,
 who gave me a being attended with many wants unknown to brute creatures,
 given me a capacity superior to theirs, and shown me,
 that a moderate application to business is proper to my present condition; and that this,
@@ -127,25 +130,25 @@ and no imaginary wants proceeding from an evil spirit, have any place in me?
 Attend then, O my soul! to this pure wisdom,
 as thy sure conducter through the manifold dangers in this world!
 
-"`Doth pride lead to vanity?
+Doth pride lead to vanity?
 Doth vanity form imaginary wants?
 Do these wants prompt men to exert their power in requiring that of others,
 from which they would rather be excused, were the same required of them?
 
-"`Do these proceedings beget hard thoughts?
+Do these proceedings beget hard thoughts?
 Do hard thoughts, when ripe, become malice?
 Does malice, when ripe,
 become revengeful and in the end inflict terrible pains on their fellow creatures,
 and spread desolations in the world?
 
-"`Do mankind, walking in uprightness, delight in each other`'s happiness?
+Do mankind, walking in uprightness, delight in each other`'s happiness?
 And do these creatures, capable of this attainment, by giving way to an evil spirit,
 employ their wit and strength to afflict and destroy one another?
 
-"`Remember then, O my soul! the quietude of those in whom Christ governs,
+Remember then, O my soul! the quietude of those in whom Christ governs,
 and in all thy proceedings feel after it!
 
-"`Doth he condescend to bless thee with his presence?
+Doth he condescend to bless thee with his presence?
 To move and influence to action?
 To dwell in thee and walk in thee?
 Remember then thy station, as a being sacred to God;
@@ -157,10 +160,12 @@ And graciously grant that I may be sacred to him.
 Oh! that I may prize this favour;
 and that my whole life may be conformable to this character!
 
-"`Remember, O my soul! that the prince of peace is thy Lord:
+Remember, O my soul! that the prince of peace is thy Lord:
 that he communicates his unmixed wisdom to his family;
 that they living in perfect simplicity,
-may give no just cause of offence to any creature, but may walk as he walked!`"
+may give no just cause of offence to any creature, but may walk as he walked!
+
+--
 
 Having felt an openness in my heart toward visiting families in our own meeting,
 and especially in the town of Mount Holly, the place of my abode,
