--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -224,7 +224,7 @@ one dependent on another, be admitted, yet high thoughts will be laid aside,
 and all men treated as becometh the sons of one father,
 agreeably to the doctrine of Christ Jesus.
 
-"`He hath laid down the best criterion,
+He hath laid down the best criterion,
 by which mankind ought to judge of their own conduct,
 and others judge for them of theirs, one towards another,
 viz. '`Whatsoever ye would that men should do unto you, do ye even so to them.`'
@@ -723,7 +723,7 @@ to forward the happiness of their children,
 it proves a means of forwarding their calamity.
 This being the case in the age next before the
 grievous calamity in the siege of Jerusalem,
-and carrying Judah captive to Babylon, they might say with propriety.
+and carrying Judah captive to Babylon, they might say with propriety,
 This came upon us, because our fathers forsook God,
 and because we did worse than our fathers.
 See Jer. 7:26.
@@ -921,7 +921,7 @@ and very often strongly represented by the Lord`'s faithful prophets.
 That the liberty of man was, by the inspired law-giver esteemed precious,
 appears in this; that such who unjustly deprived men of it,
 were to be punished in like manner as if they had murdered them.
-"`He that stealeth a man, and selleth him; or if he be founds in his hand,
+"`He that stealeth a man, and selleth him; or if he be found in his hand,
 shall surely be put to death.`"
 This part of the law was so considerable, that Paul the learned Jew,
 giving a brief account of the uses of the law, adds this,
