--- a/journal-writings/original/16-various-subjects.adoc
+++ b/journal-writings/original/16-various-subjects.adoc
@@ -125,7 +125,7 @@ O that our eyes may be single to the Lord! may we reverently wait on
 him for strength to lay aside all unnecessary expense of every kind,
 and learn contentment in a plain simple life.
 
-May we in lowliness submit to the leadings of his spirit,
+May we in lowliness submit to the leadings of his Spirit,
 and enter upon any outward employ which he graciously points out to us,
 and then whatever difficulties arise in consequence of our faithfulness,
 I trust they will work for our good.
@@ -272,7 +272,7 @@ When they feel pains, and stiffness in their joints and limbs, weakness of appet
 and that a little labour is wearisome,
 and still behold themselves in the neglected uncomfortable condition of a slave,
 and oftentimes to a young unsympathizing man.
-For men to be thus treated from one generation to another who,
+for men to be thus treated from one generation to another who,
 besides their own distresses, think on the slavery entailed on their posterity,
 and are grieved,
 what disagreeable thoughts must they have of the professed followers
