--- a/journal-writings/original/04-chapter-2.adoc
+++ b/journal-writings/original/04-chapter-2.adoc
@@ -270,6 +270,9 @@ at four times:
 [.embedded-content-document]
 --
 
+[.numbered-group]
+====
+
 [.numbered]
 I+++.+++ Oh! that my head were as waters, and mine eyes as a fountain of tears,
 that I might weep day and night, until acquainted with my God.
@@ -285,6 +288,8 @@ and that thy grace may abound in me.
 [.numbered]
 IV. O Lord, that I may be acquainted with thy presence,
 that I may be seasoned with thy salt, that thy grace may abound in me.
+
+====
 
 --
 
