update spelling: court-house > courthouse

--- a/journal-writings/original/04-chapter-2.adoc
+++ b/journal-writings/original/04-chapter-2.adoc
@@ -16,7 +16,7 @@ and after a conference with some elderly Friends, I agreed to go.
 We set out the 5th day of the ninth month, in the year 1743;
 and had an evening meeting at a tavern in Brunswick,
 a town in which none of our Society dwelt; the room was full, and the people quiet.
-Thence to Amboy, and had an evening meeting in the court-house;
+Thence to Amboy, and had an evening meeting in the courthouse;
 to which came many people, amongst whom were several members of assembly,
 they being in town on the public affairs of the province:
 in both these meetings my ancient companion was enlarged to preach,
