meetinghouse not meeting( |-)house

--- a/journal-writings/original/09-chapter-7.adoc
+++ b/journal-writings/original/09-chapter-7.adoc
@@ -261,7 +261,7 @@ not doubting their willingness to come together; and as I proposed a visit to mi
 elders and overseers only; he named some other`'s, whom he desired might be present also.
 As a careful messenger was wanted to acquaint them in a proper manner,
 he offered to go to all their houses to open the matter to them and did so.
-About the eighth hour next morning, we met in the meeting-house chamber,
+About the eighth hour next morning, we met in the meetinghouse chamber,
 and the last mentioned country friend, also my companion and John Storer, with us; when,
 after a short time of retirement,
 I acquainted them with the steps I had taken in procuring that meeting,
