--- a/journal-writings/original/14-chapter-12.adoc
+++ b/journal-writings/original/14-chapter-12.adoc
@@ -285,7 +285,7 @@ and am thankful,
 under a sense of the goodness of the Lord toward those that are of a contrite spirit.
 
 The 6th day of the ninth month and first of the week; was this day at Counterside,
-a large meeting-house and very full: and through the opening of pure love,
+a large meetinghouse and very full: and through the opening of pure love,
 it was a strengthening time to me, and I believe to many more.
 
 The 13th day of the month.
