modernize archaic usages of 'issue'

--- a/journal-writings/modernized/15-keeping-negroes.adoc
+++ b/journal-writings/modernized/15-keeping-negroes.adoc
@@ -606,7 +606,7 @@ in humbly endeavoring to be acquainted with his will concerning us,
 and with the nature and tendency of those things which we practice.
 For as justice remains to be justice, so many people of reputation in the world,
 joining with wrong things, does not excuse others in joining with them,
-nor make the consequence of their proceedings less dreadful in the final issue,
+nor make the consequence of their proceedings less dreadful in the final outcome,
 than it would otherwise be.
 
 Where unrighteousness is justified from one age to another,
