--- a/journal-writings/modernized/18-remarks.adoc
+++ b/journal-writings/modernized/18-remarks.adoc
@@ -694,7 +694,7 @@ and he ordered the hold to be searched.
 
 During the examination one of the sailors happened to
 strike a cask which was tightly closed up,
-when he heard a faint sound issue from it like the voice of some creature expiring.
+when he heard a faint sound proceed from it like the voice of some creature expiring.
 The cask was immediately opened, when two slave girls,
 about twelve or fourteen years of age,
 in the last stage of suffocation were found packed up in it.
@@ -1036,7 +1036,7 @@ were their bitter lamentations day after day to ring in our ears,
 and their mournful cries in the night to hinder us from sleeping:
 were we to hear the sound of the tumult when the slaves
 on board the ships attempt to kill the English,
-and behold the issue of those bloody conflicts;
+and behold the end result of those bloody conflicts;
 what pious man could be a witness to these things,
 and see a trade carried on in this manner, without being deeply affected with sorrow?
 Through abiding in the love of Christ we feel a
