--- a/journal-writings/original/19-epistle.adoc
+++ b/journal-writings/original/19-epistle.adoc
@@ -1,3 +1,4 @@
+[#epistle, short="Epistle to the Quarterly and Monthly Meetings"]
 == An Epistle to the Quarterly and Monthly Meetings of Friends.
 
 [.salutation]
