modernize 'mine' to 'my' in certain cases

--- a/journal-writings/modernized/03-chapter-1.adoc
+++ b/journal-writings/modernized/03-chapter-1.adoc
@@ -92,7 +92,7 @@ Upon the whole, my mind was more and more alienated from the Truth,
 and I hastened toward destruction.
 While I meditate on the gulf towards which I travelled,
 and reflect on my youthful disobedience, for these things I weep,
-mine eye runs down with water.
+my eye runs down with water.
 
 Advancing in age, the number of my acquaintance increased,
 and thereby my way grew more difficult.
