--- a/journal-writings/modernized/04-chapter-2.adoc
+++ b/journal-writings/modernized/04-chapter-2.adoc
@@ -280,7 +280,7 @@ at four times:
 ====
 
 [.numbered]
-I+++.+++ Oh! that my head were as waters, and mine eyes as a fountain of tears,
+I+++.+++ Oh! that my head were as waters, and my eyes as a fountain of tears,
 that I might weep day and night, until acquainted with my God.
 
 [.numbered]
