--- a/journal-writings/modernized/05-chapter-3.adoc
+++ b/journal-writings/modernized/05-chapter-3.adoc
@@ -116,7 +116,7 @@ or whether to go home and wait for greater clearness.
 I kept my distress secret; and going with a Friend to his house,
 my desires were to the great Shepherd for his heavenly instruction;
 and in the morning I felt easy to proceed on the visit, being very low in my mind:
-and as mine eye was turned to the Lord, waiting in families in deep reverence before him,
+and as my eye was turned to the Lord, waiting in families in deep reverence before him,
 he was pleased graciously to afford help; so that we had many comfortable opportunities,
 and it appeared as a fresh visitation to some young people.
 I spent several weeks this winter in the service;
