--- a/journal-writings/modernized/06-chapter-4.adoc
+++ b/journal-writings/modernized/06-chapter-4.adoc
@@ -14,7 +14,7 @@ as I lay, were on the goodness and mercy of the Lord;
 in a sense whereof my heart was contrite.
 
 After this, I went to sleep again; and sleeping a short time, I awoke; it was yet dark,
-and no appearance of day or moonshine; and as I opened mine eyes,
+and no appearance of day or moonshine; and as I opened my eyes,
 I saw a light in my chamber at the apparent distance of five feet,
 about nine inches diameter, of a clear easy brightness,
 and near its centre the most radiant.
