--- a/journal-writings/modernized/10-chapter-8.adoc
+++ b/journal-writings/modernized/10-chapter-8.adoc
@@ -441,7 +441,7 @@ time when the troubles of war were increasing,
 and by reason of much wet weather, traveling was more difficult than usual,
 I looked upon it as a more favorable opportunity to season my mind,
 and bring me into a nearer sympathy with them:
-and as mine eye was to the great Father of mercies,
+and as my eye was to the great Father of mercies,
 humbly desiring to learn what his will was concerning me, I was made quiet and content.
 
 Our guide`'s horse, though hoppled, went away in the night; and after finding our own,
@@ -722,7 +722,7 @@ my mind was centered in resignation, in which I always found quietness.
 And now, this day, though I had the same dangerous wilderness between me and home,
 I was inwardly joyful that the Lord had strengthened me to come on this visit,
 and manifested a fatherly care over me in my poor lowly condition,
-when in mine own eyes I appeared inferior to many among the Indians.
+when in my own eyes I appeared inferior to many among the Indians.
 
 When the last mentioned meeting was ended, it being night, Papunehang went to bed;
 and one of the interpreters sitting by me,
