--- a/journal-writings/original/18-remarks.adoc
+++ b/journal-writings/original/18-remarks.adoc
@@ -823,7 +823,7 @@ declared he would never hesitate to throw the slaves overboard, to prevent being
 Captain Wauchope in the same letter informs, that on the 18th of ninth month, 1836,
 the Thalia captured the Portuguese brig Felix, five hundred and ninety slaves on board.
 '`After capture,`' he says, '`I went on board,
-and such a scene of horror it is not easy to describe; the long`'-boat on the booms,
+and such a scene of horror it is not easy to describe; the long-boat on the booms,
 and the deck aft, were crowded with little children, sickly, poor little unhappy things,
 some of them rather pretty, and some much marked and tattoed;
 much pains must have been taken by their miserable parents to ornament and beautify them.
@@ -895,7 +895,7 @@ and to dwell under the weight of it, by the fact that our own country is implica
 in no small degree in the guilt of the traffic,
 it being well ascertained that American vessels, American capital and American citizens,
 are employed in its prosecution.
--End of Editor`'s note.]
+--End of Editor`'s note.]
 
 ____
 
