fix "be you" auto-modernization error

--- a/journal-writings/modernized/17-harmony.adoc
+++ b/journal-writings/modernized/17-harmony.adoc
@@ -407,7 +407,7 @@ where many being employed were all preserved in purity;
 "`They shall call them the holy people, the redeemed of the Lord,
 and you shall be called, sought out, a city not forsaken.`"
 The apostle after mentioning the mystery of Christ`'s sufferings,
-exhorts "`Be you holy in all manner of conversation.`"
+exhorts "`Be holy in all manner of conversation.`"
 There is a conversation necessary in trade;
 and there is a conversation so foreign from the nature of Christ`'s kingdom,
 that it is represented in the similitude of one
