fix obsolete spelling: biassed > biased

--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -208,7 +208,7 @@ This, in a good degree, is the case with some into whose hands they have fallen;
 but that too many treat them otherwise, not seeming conscious of any neglect,
 is alas! too evident.
 
-When self-love presides in our minds, our opinions are biassed in our own favour;
+When self-love presides in our minds, our opinions are biased in our own favour;
 and in this condition, being concerned with a people so situated,
 that they have no voice to plead their own cause,
 there is danger of using ourselves to an undisturbed partiality, until by long custom,
@@ -1037,7 +1037,7 @@ is most painful and afflicting to a conscientious creature.
 
 It is our happiness faithfully to serve the Divine Being who made us:
 his perfection makes our service reasonable;
-but so long as men are biassed by narrow self-love,
+but so long as men are biased by narrow self-love,
 so long they are unfit for absolute power over other men.
 
 Men, taking on them the government of others, may intend to govern reasonably,
