fix more "<verb> you" auto-modernization errors

--- a/journal-writings/modernized/16-various-subjects.adoc
+++ b/journal-writings/modernized/16-various-subjects.adoc
@@ -457,7 +457,7 @@ and spears into pruning-hooks, and that nation should not lift up sword against 
 neither shall they learn war any more;`" he immediately
 directs the minds of people to the Divine teacher,
 in this remarkable language: "`O house of Jacob,
-come you and let us walk in the light of the Lord.`"
+come and let us walk in the light of the Lord.`"
 To wait for the direction of this light, in all temporal as well as spiritual concerns,
 appears necessary; for if in any case we enter lightly into temporal affairs,
 without feeling this Spirit of Truth to open our way therein,
