fix error in letter start

--- a/journal-writings/modernized/04-chapter-2.adoc
+++ b/journal-writings/modernized/04-chapter-2.adoc
@@ -221,13 +221,13 @@ A few years after she attained to mature age,
 through the gracious visitations of God`'s love,
 she was strengthened to live a self-denying exemplary life,
 giving herself much to reading and meditation.
-The following letter may show, in some degree, her disposition: Haddonfield,
+The following letter may show, in some degree, her disposition:--
 
 [.embedded-content-document.letter]
 --
 
 [.signed-section-context-open]
-Eleventh Month 1st, 1743.
+Haddonfield, Eleventh Month 1st, 1743.
 
 [.salutation]
 Beloved brother, John Woolman,
