--- a/journal-writings/original/04-chapter-2.adoc
+++ b/journal-writings/original/04-chapter-2.adoc
@@ -216,7 +216,7 @@ through the gracious visitations of God`'s love,
 she was strengthened to live a self-denying exemplary life,
 giving herself much to reading and meditation.
 
-The following letter may show, in some degree, her disposition:
+The following letter may show, in some degree, her disposition:--
 
 [.embedded-content-document.letter]
 --
